# backups

alarm/: colors.json  notes.secret  test.py
computergraphics/: README.md
computergraphics/01_Programming_Assignment_1/Assignment/Example_1/Example_1/: CMakeLists.txt  Radiosity.cpp
computergraphics/01_Programming_Assignment_1/Results/Solution_&_Presentation/: Presentation_Programming_Assignment_1.pptx  Solution_Programming_Assignment_1.docx
computergraphics/01_Programming_Assignment_1/Solution/: Radiosity.cpp
computergraphics/01_Programming_Assignment_1/Submission/Solutions_PA1_Perschke_Mittermair/: CMakeLists.txt  Radiosity.cpp  clang-format
computergraphics/02_Programming_Assignment_2/Assignment/Example_2/Example_2/: PathTracing.cpp
computergraphics/02_Programming_Assignment_2/Solution/: CMakeLists.txt  PathTracing  PathTracing.cpp  PathTracing.hpp  build.sh  build_and_run.sh  readMe.txt  run.sh
computergraphics/02_Programming_Assignment_2/Solution/assets/cornell-box/: CornellBox-Original.mtl  readMe.txt
computergraphics/02_Programming_Assignment_2/Submission/Solutions_PA2_Perschke_Mittermair/Solution/: ThinLens.hpp  build.sh  build_and_run.sh  run.sh
computergraphics/02_Programming_Assignment_2/Submission/Solutions_PA2_Perschke_Mittermair/Solution/assets/jeep_lowpoly/: LICENCE.txt  jeep.mtl
computergraphics/03_Final_Project/Assignment/: More_Detailled_Explaination.txt  readMe.txt
computergraphics/03_Final_Project/Assignment/Example_2/Example_2/: CMakeLists.txt
computergraphics/03_Final_Project/Results/Rendered_Images/: image_138k_spp.ppm  image_4_spp.ppm
computergraphics/03_Final_Project/Solution/: CMakeLists.txt  PathTracing.cpp  build.sh  build_and_run.sh  run.sh
computergraphics/03_Final_Project/Solution/completed/original/: 138k_render.out
computergraphics/03_Final_Project/Solution/image_diff/: CMakeLists.txt  image.hpp  image_diff.cpp  image_diff.h
computergraphics/03_Final_Project/Solution/results/: create_graphics.py  render_images.py
computergraphics/03_Final_Project/Solution/results/data/: render.psnr  render.times
computergraphics/03_Final_Project/Solution/results/images/BLUE_NOISE/: 1.ppm  101.ppm  106.ppm  11.ppm  111.ppm  116.ppm  16.ppm  21.ppm  26.ppm  31.ppm  36.ppm  41.ppm  46.ppm  51.ppm  56.ppm  6.ppm  61.ppm  66.ppm  71.ppm  76.ppm  81.ppm  86.ppm  91.ppm  96.ppm
computergraphics/03_Final_Project/Solution/results/images/BLUE_NOISE/differences/: diff_1.ppm  diff_101.ppm  diff_106.ppm  diff_11.ppm  diff_111.ppm  diff_16.ppm  diff_21.ppm  diff_26.ppm  diff_31.ppm  diff_36.ppm  diff_41.ppm  diff_46.ppm  diff_51.ppm  diff_56.ppm  diff_6.ppm  diff_61.ppm  diff_66.ppm  diff_71.ppm  diff_76.ppm  diff_81.ppm  diff_86.ppm  diff_91.ppm  diff_96.ppm
computergraphics/03_Final_Project/Solution/results/images/DRAND48/: 1.ppm  10.ppm  100.ppm  101.ppm  106.ppm  11.ppm  111.ppm  16.ppm  20.ppm  200.ppm  21.ppm  26.ppm  31.ppm  36.ppm  41.ppm  46.ppm  50.ppm  500.ppm  51.ppm  56.ppm  6.ppm  61.ppm  66.ppm  71.ppm  76.ppm  81.ppm  86.ppm  91.ppm  96.ppm
computergraphics/03_Final_Project/Solution/results/images/DRAND48/differences/: diff_1.ppm  diff_10.ppm  diff_100.ppm  diff_101.ppm  diff_106.ppm  diff_11.ppm  diff_111.ppm  diff_16.ppm  diff_20.ppm  diff_200.ppm  diff_21.ppm  diff_26.ppm  diff_31.ppm  diff_36.ppm  diff_41.ppm  diff_46.ppm  diff_50.ppm  diff_500.ppm  diff_51.ppm  diff_56.ppm  diff_6.ppm  diff_61.ppm  diff_66.ppm  diff_71.ppm  diff_76.ppm  diff_81.ppm  diff_86.ppm  diff_91.ppm  diff_96.ppm
computergraphics/03_Final_Project/Solution/results/images/HALTON_17_19/: 1.ppm  10.ppm  100.ppm  101.ppm  106.ppm  11.ppm  111.ppm  112.ppm  115.ppm  116.ppm  16.ppm  20.ppm  21.ppm  26.ppm  31.ppm  36.ppm  41.ppm  46.ppm  50.ppm  51.ppm  56.ppm  6.ppm  61.ppm  66.ppm  71.ppm  76.ppm  81.ppm  86.ppm  91.ppm  96.ppm
computergraphics/03_Final_Project/Solution/results/images/HALTON_17_19/differences/: 1.ppm  diff_10.ppm  diff_100.ppm  diff_101.ppm  diff_106.ppm  diff_11.ppm  diff_111.ppm  diff_16.ppm  diff_20.ppm  diff_21.ppm  diff_26.ppm  diff_31.ppm  diff_36.ppm  diff_41.ppm  diff_46.ppm  diff_50.ppm  (+11 more)
computergraphics/03_Final_Project/Solution/results/images/STRATIFIED/: 1.ppm  101.ppm  106.ppm  11.ppm  111.ppm  16.ppm  21.ppm  26.ppm  31.ppm  36.ppm  41.ppm  46.ppm  51.ppm  56.ppm  6.ppm  61.ppm  66.ppm  71.ppm  76.ppm  81.ppm  86.ppm  91.ppm  96.ppm
perfcomputing/: .clang-format  .gitignore
perfcomputing/sheet10/: Makefile  array.c  array.h  benchmark.c  benchmark.h  linked_list.c  linked_list.h  setup.py  tiered_array.c  tiered_array.h  unrolled_linked_list.c  unrolled_linked_list.h
(+23 files in other folders)
